--- a/anchor/Anchor.toml
+++ b/anchor/Anchor.toml
@@ -4,14 +4,14 @@
 resolution = true
 skip-lint = false
 
-[programs.localnet]
+[programs.devnet]
 anchor = "8u2absR3zLEnTcsM542zjMNbeNzf1dpViq9FKPxAiFfd"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "Devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
