--- a/client/package.json
+++ b/client/package.json
@@ -10,18 +10,25 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.4",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cva": "^0.0.0",
     "framer-motion": "^11.11.11",
+    "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-gauge-chart": "^0.5.1",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
